--- a/Pages/Students/Create.cshtml
+++ b/Pages/Students/Create.cshtml
@@ -1,4 +1,5 @@
 @page
+@using Student_Teacher_CRUD.Models
 @model student_teacher_CRUD.Pages.Students.CreateModel
 
 @{
@@ -28,6 +29,23 @@
                 <input asp-for="Student.Email" class="form-control" />
                 <span asp-validation-for="Student.Email" class="text-danger"></span>
             </div>
+            <!--added dropdown for teachers -->
+            <div class="form-group">
+                <label asp-for="Student.TeacherId" class="control-label"></label>
+                <select asp-for="Student.TeacherId" class="form-control">
+                    <option value="" selected disabled hidden>Select teacher</option>
+                    
+                    @foreach (Teacher teacher in Model.Teacher)
+                    {
+                        <option value="@teacher.ID">
+                            @Html.Label($"{teacher.First_Name} {teacher.Last_Name}")
+                        </option>
+                    }
+                    
+                </select>
+            </div>
+            
+            <!-- end of added dropdown -->
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
