--- a/Pages/Students/Index.cshtml
+++ b/Pages/Students/Index.cshtml
@@ -22,6 +22,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Student[0].Email)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Student[0].Teacher)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -36,6 +39,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+               @Html.DisplayFor(modelItem => item.Teacher.First_Name)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
